# sionna-large-radio-maps

./: .gitignore  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: visualize_tiling.ipynb
scripts/: common.py  compute_radio_maps.py  elevation_from_geometry.py  gen_aspen_dataset.py  gen_boston_dataset.py  gen_boulder_dataset.py  gen_lubbock_dataset.py  generate_tiling.py  preprocess_transmitters.py  scene_builder.py
scripts/slurm/: common.py  radio_maps_worker.py  submit_radio_maps.py  watch_jobs_progress.py
sionna_lrm/: __init__.py  antenna_patterns.py  base_stations.py  constants.py  radio_maps.py  rendering.py  rm_utils.py  tiling.py
sionna_lrm/scene/: heightmap.py  logging_utils.py  quadtree.py  utils.py
